[gd_scene load_steps=18 format=2]

[ext_resource path="res://player/player2.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/scr_controller2.gd" type="Script" id=3]
[ext_resource path="res://player/scr_controller1.gd" type="Script" id=4]
[ext_resource path="res://ball/obj_ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://ball/Scr_ball.gd" type="Script" id=6]
[ext_resource path="res://levels/text.gd" type="Script" id=7]
[ext_resource path="res://levels/song.wav" type="AudioStream" id=8]
[ext_resource path="res://Sprite-0003.png" type="Texture" id=9]
[ext_resource path="res://Assets/PixelOperator.ttf" type="DynamicFontData" id=10]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="VisualScript" id=4]
data = {
"base_type": "StaticBody2D",
"functions": [ {
"data_connections": [  ],
"function_id": -1,
"name": "f_312843592",
"nodes": [  ],
"scroll": Vector2( -80, 0 ),
"sequence_connections": [  ]
} ],
"is_tool_script": false,
"signals": [  ],
"variables": [  ],
"vs_unify": true
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 568, 188 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 260.25, 148.75 )

[sub_resource type="DynamicFont" id=5]
size = 26
extra_spacing_space = 25
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 223.0
margin_top = 150.0
margin_right = 811.0
margin_bottom = 447.0
texture = ExtResource( 9 )
expand = true

[node name="KinematicBody2D2" parent="." instance=ExtResource( 1 )]
position = Vector2( 750, 292.313 )
scale = Vector2( 0.96, 1.10423 )
script = ExtResource( 3 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 285, 292 )
scale = Vector2( 0.440239, 0.720002 )
script = ExtResource( 4 )

[node name="RigidBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 524, 289 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_velocity = Vector2( 500, 50 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 6 )

[node name="collisionwall2" type="StaticBody2D" parent="."]
script = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="collisionwall2"]
position = Vector2( 536, 635 )
scale = Vector2( -6.99555, 1.02855 )
shape = SubResource( 3 )

[node name="collisionwall1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisionwall1"]
position = Vector2( 594, -33 )
shape = SubResource( 3 )

[node name="wall_player1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall_player1"]
position = Vector2( 1064, 298.75 )
shape = SubResource( 2 )

[node name="wall_player2" type="StaticBody2D" parent="."]
position = Vector2( -48, 276 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall_player2"]
position = Vector2( 34, 21.5 )
shape = SubResource( 2 )

[node name="texto" type="Label" parent="."]
margin_left = 352.0
margin_top = 157.0
margin_right = 640.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 5 )
text = "PRESS START TO PLAY"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 518, 300 )
current = true
zoom = Vector2( 0.535, 0.553 )

[node name="Player1" type="Label" parent="."]
margin_left = 368.0
margin_top = 198.0
margin_right = 432.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="Player2" type="Label" parent="."]
margin_left = 640.0
margin_top = 198.0
margin_right = 699.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 7 )
text = "0"
